<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_receipt_alphabetical"
        android:orderInCategory="100"
        android:title="@string/sort_receipt_alphabetical"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_receipt_date_recent_first"
        android:orderInCategory="100"
        android:title="@string/sort_receipt_date_recent_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_receipt_date_older_first"
        android:orderInCategory="100"
        android:title="@string/sort_receipt_date_older_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_receipt_price_ascending"
        android:orderInCategory="100"
        android:title="@string/sort_receipt_price_ascending"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_receipt_price_descending"
        android:orderInCategory="100"
        android:title="@string/sort_receipt_price_descending"
        app:showAsAction="never" />
</menu>