<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan_receipt.division.FinalizationFragment" >

    <include
        android:id="@+id/information_message"
        layout="@layout/information_message_layout" />

    <LinearLayout
        android:id="@+id/textview_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/information_message">


        <TextView
            android:id="@+id/receipt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/foo" />

        <TextView
            android:id="@+id/receipt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/receipt_total" />

        <TextView
            android:id="@+id/receipt_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:text="@string/receipt_remaining" />
    </LinearLayout>

    <ListView
        android:id="@+id/participant_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_list" />

</androidx.constraintlayout.widget.ConstraintLayout>