<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_history">


    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.receiptas.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_scan_receipt">
        <action
            android:id="@+id/show_receipt_detail"
            app:destination="@id/receiptDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/receiptDetailFragment"
        android:name="com.example.receiptas.ui.history.receipt_detail.ReceiptDetailFragment"
        android:label="{receipt_name}"
        tools:layout="@layout/fragment_receipt_detail" >
        <argument
            android:name="receipt_id"
            app:argType="integer"/>
        <argument
            android:name="receipt_name"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_scan_receipt"
        android:name="com.example.receiptas.ui.scan_receipt.ScanReceiptFragment"
        android:label="@string/menu_scan_receipt"
        tools:layout="@layout/fragment_scan_receipt" >
        <action
            android:id="@+id/action_nav_scan_receipt_to_nav_scan_receipt_process_image"
            app:destination="@id/nav_scan_receipt_process_image" />
        <action
            android:id="@+id/scan_receipt_to_correction"
            app:destination="@id/receiptCorrectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_scan_receipt_process_image"
        android:name="com.example.receiptas.ui.scan_receipt.ScanReceiptProcessImageFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_scan_receipt_process_image" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="numberOfImages"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="processed_images"
            app:argType="java.util.ArrayList" />
        <argument
            android:name="image_bitmap"
            app:argType="android.graphics.Bitmap"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_scan_receipt_process_image_self"
            app:destination="@id/nav_scan_receipt_process_image" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.receiptas.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addingParticipantsFragment"
        android:name="com.example.receiptas.ui.scan_receipt.division.AddingParticipantsFragment"
        android:label="Participants"
        tools:layout="@layout/fragment_division_adding_participants" >
        <action
            android:id="@+id/action_addingParticipantsFragment_to_itemDivision"
            app:destination="@id/itemDivision" />
    </fragment>

    <fragment
        android:id="@+id/itemDivision"
        android:name="com.example.receiptas.ui.scan_receipt.division.ItemDivisionFragment"
        android:label="Division"
        tools:layout="@layout/fragment_item_divison">
    <argument
        android:name="participantIndex"
        app:argType="integer"
        android:defaultValue="0" />
        <action
            android:id="@+id/action_itemDivision_self"
            app:destination="@id/itemDivision" />
        <action
            android:id="@+id/action_itemDivision_to_finalizationFragment"
            app:destination="@id/finalizationFragment" />
    </fragment>
    <fragment
        android:id="@+id/finalizationFragment"
        android:name="com.example.receiptas.ui.scan_receipt.division.FinalizationFragment"
        android:label="Finalization"
        tools:layout="@layout/fragment_finalization">

        <action
            android:id="@+id/show_new_receipt_details"
            app:destination="@id/receiptDetailFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_history"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/receiptCorrectionFragment"
        android:name="com.example.receiptas.ui.scan_receipt.correction.ReceiptCorrectionFragment"
        android:label="@string/menu_correction">
        <action
            android:id="@+id/correction_to_participant"
            app:destination="@id/addingParticipantsFragment" />
    </fragment>

</navigation>